fix button alignment issue

--- a/app/assets/stylesheets/tweets.css.sass
+++ b/app/assets/stylesheets/tweets.css.sass
@@ -1,1 +1,5 @@
-
+#search
+  .btn
+    margin-top: 10px
+  .form-group
+    vertical-align: bottom
